Bug#26664 test suite times out on OS X 64bit  - The "mysql client in mysqld"(which is used by    replication and federated) should use alarms instead of setting    socket timeout value if the rest of the server uses alarm. By    always calling 'my_net_set_write_timeout'    or 'my_net_set_read_timeout' when changing the timeout value(s), the    selection whether to use alarms or timeouts will be handled by    ifdef's in those two functions.  - Move declaration of 'vio_timeout' into "vio_priv.h"